--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Use Swift Package Manager</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.4.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.5.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="getting-started/foundation.html"><strong aria-hidden="true">2.6.</strong> Swift Foundation</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.2.</strong> Tips</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Use Swift Package Manager</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.4.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.5.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="getting-started/foundation.html"><strong aria-hidden="true">2.6.</strong> Swift Foundation</a></li><li class="chapter-item expanded "><a href="getting-started/testing.html"><strong aria-hidden="true">2.7.</strong> Testing your app</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.2.</strong> Tips</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -340,6 +340,80 @@ SwiftWasm Foundation:</p>
 <p>Related functions and properties on other types are also absent or disabled. We would like to make
 them available in the future as soon as possible, and <a href="getting-started/../contribution-guide/index.html">we invite you to 
 contribute</a> and help us in achieving this goal!</p>
+<h1><a class="header" href="#testing-your-app" id="testing-your-app">Testing your app</a></h1>
+<p>You can write a test suite for your SwiftWasm app or library, or run an existing test suite
+written for <code>XCTest</code> if you port existing code to SwiftWasm. Your project has to have a
+<code>Package.swift</code> package manifest for this to work. We assume that you use SwiftPM to build your
+project and that you have a working package manifest. Please follow <a href="getting-started/./swift-package.html">our SwiftPM guide</a> for new projects.</p>
+<h2><a class="header" href="#a-simple-test-case" id="a-simple-test-case">A simple test case</a></h2>
+<p>Let's assume you have a <code>SwiftWasmLibrary</code> target in your project that you'd like to test. Your
+<code>Package.swift</code> should also have a test suite target with a dependency on the library target. It
+would probably look like this:</p>
+<pre><code class="language-swift">// swift-tools-version:5.3
+// The swift-tools-version declares the minimum version of Swift required to build this package.
+
+import PackageDescription
+
+let package = Package(
+  name: &quot;HelloSwiftWasm&quot;,
+  products: [
+    .executable(name: &quot;SwiftWasmApp&quot;, targets: [&quot;SwiftWasmApp&quot;]),
+  ],
+  targets: [
+    // Targets are the basic building blocks of a package. A target can define a module or a test
+    // suite. Targets can depend on other targets in this package, and on products in packages which
+    // this package depends on.
+    .target(
+      name: &quot;SwiftWasmApp&quot;,
+      dependencies: [&quot;SwiftWasmLibrary&quot;],
+    ),
+    .target(name: &quot;SwiftWasmLibrary&quot;),
+    .testTarget(name: &quot;SwiftWasmTests&quot;, dependencies: [&quot;SwiftWasmLibrary&quot;]),
+  ]
+)
+</code></pre>
+<p>Now you should make sure there's <code>Tests/SwiftWasmTests</code> subdirectory in your project.
+If you don't have any files in it yet, create <code>SwiftWasmTests.swift</code> in it:</p>
+<pre><code class="language-swift">import SwiftWasmLibrary
+import XCTest
+
+final class SwiftWasmTests: XCTestCase {
+  func testTrivial() {
+    XCTAssertEqual(text, &quot;Hello, world&quot;)
+  }
+}
+</code></pre>
+<p>This code assumes that your <code>SwiftWasmLibrary</code> defines some <code>text</code> with <code>&quot;Hello, world&quot;</code> value
+for this test to pass. Your test functions should all start with <code>test</code>, please see <a href="https://developer.apple.com/documentation/xctest/defining_test_cases_and_test_methods">XCTest 
+documentation</a>
+for more details.</p>
+<h2><a class="header" href="#xctest-limitations-in-the-swiftwasm-toolchain" id="xctest-limitations-in-the-swiftwasm-toolchain">XCTest limitations in the SwiftWasm toolchain</a></h2>
+<p>As was mentioned in <a href="getting-started//foundation.html">our section about Swift Foundation</a>, multi-threading and
+file system APIs are currently not available in SwiftWasm. This means that <code>XCTestExpectation</code>
+and test hooks related to <code>Bundle</code> (such as <code>testBundleWillStart(_:)</code> and <code>testBundleDidFinish(_:)</code>)
+are not available in test suites compiled with SwiftWasm. If you have an existing test suite you're
+porting to WebAssembly, you should use <code>#if os(WASI)</code> directives to exclude places where you use
+these APIs from compilation.</p>
+<h2><a class="header" href="#building-and-running-the-test-suite-with-carton" id="building-and-running-the-test-suite-with-carton">Building and running the test suite with <code>carton</code></a></h2>
+<p>If you use <a href="https://carton.dev"><code>carton</code></a> to develop and build your app, as described in <a href="getting-started/./browser-app.html">our guide
+for browser apps</a>, just run <code>carton test</code> in the
+root directory of your package. This will automatically build the test suite and run it with Wasmer
+for you.</p>
+<h2><a class="header" href="#building-and-running-the-test-suite-with-swiftenv" id="building-and-running-the-test-suite-with-swiftenv">Building and running the test suite with <code>swiftenv</code></a></h2>
+<p>If you manage your SwiftWasm toolchain with <code>swiftenv</code> (as shown in <a href="getting-started/./setup.html">the &quot;Setup&quot; section</a>),
+you can build your test suite by running this command in your terminal:</p>
+<pre><code class="language-sh">$ swift build --build-tests
+</code></pre>
+<p>If you're used to running <code>swift test</code> to run test suites for other Swift platforms, we have to
+warn you that this won't work. <code>swift test</code> doesn't know what WebAssembly environment you'd like to 
+use to run your tests. Because of this building tests and running them are two separate steps when
+using <code>swiftenv</code>. After your tests are built, you can use a WASI-compatible host such as
+<a href="https://wasmer.io/">Wasmer</a> to run the test bundle:</p>
+<pre><code class="language-sh">$ wasmer .build/debug/HelloSwiftWasmPackageTests.xctest
+</code></pre>
+<p>As you can see, the produced test binary starts with the name of your package followed by
+<code>PackageTests.xctest</code>. It is located in the <code>.build/debug</code> subdirectory, or in the <code>.build/release</code>
+subdirectory when you build in release mode.</p>
 <h1><a class="header" href="#examples" id="examples">Examples</a></h1>
 <p>This section shows you example usage of our toolchain.</p>
 <h1><a class="header" href="#importing-a-function-from-host-environments" id="importing-a-function-from-host-environments">Importing a function from host environments</a></h1>
