--- a/print.html
+++ b/print.html
@@ -211,6 +211,9 @@
 SwiftWasm Swift version 5.3 (swiftlang-5.3.0)
 Target: x86_64-apple-darwin19.6.0
 </code></pre>
+<blockquote>
+<p>Warning: <code>xcrun</code> finds executable binary based on <code>--toolchain</code> option or <code>TOOLCHAINS</code> environment variable, but it also sets <code>SDKROOT</code> as host target SDK (e.g. <code>MacOSX.sdk</code>). So you need to specify <code>-sdk</code> option as <code>/Library/Developer/Toolchains/swift-wasm-5.3.0-RELEASE.xctoolchain/usr/share/wasi-sysroot</code> when launching <code>swiftc</code> from xcrun. <code>swift build</code> or other SwiftPM commands automatically find SDK path based on target triple, so they don't require to specify it.</p>
+</blockquote>
 <h2><a class="header" href="#linux" id="linux">Linux</a></h2>
 <p>Packages for Linux are tar archives including a copy of the Swift compiler, linker, and related tools. You can install them anywhere as long as the extracted tools are in your PATH.</p>
 <h3><a class="header" href="#requirements-1" id="requirements-1">Requirements</a></h3>
